# ccloop

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
src/ccloop/: __init__.py  cli.py  guard.py  install.py  keepgoing.py  runner.py  stream.py  summarize.py  transcript.py  usage.py
tests/: conftest.py  fake_claude.py  test_cli.py  test_guard.py  test_install.py  test_keepgoing.py  test_runner.py  test_stream.py  test_summarize.py  test_transcript.py  test_usage.py
