[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccloop"
version = "0.2.2"
description = "Relay-loop wrapper for Claude Code: hands work between fresh sessions as context fills."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Steve Shoecraft" }]
keywords = ["claude", "claude-code", "automation", "relay-loop"]
dependencies = []

[project.scripts]
ccloop = "ccloop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
